[metadata]
name = swiplserver
version = 1.0.1
author = Eric Zinda
author_email = ericz@inductorsoftware.com
description = swiplserver integrates SWI Prolog with Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SWI-Prolog/packages-mqi
project_urls =
    Bug Tracker = https://github.com/SWI-Prolog/packages-mqi/issues
    Documentation = https://www.swi-prolog.org/packages/mqi/prologmqi.html
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = swiplserver
python_requires = >=3.7
